--- a/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.less
+++ b/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.less
@@ -113,7 +113,7 @@
         }
     }
 
-    .condition-group--field {
+    .condition-group__field {
         border: 0;
         background: none;
         color: @sw-condition-group-color-primary-text;
@@ -122,11 +122,11 @@
         margin: 0;
         width: 100%;
 
-        &.is--light {
+        &.is--primary {
             color: @sw-condition-group-color-primary-text;
         }
 
-        &.is--dark {
+        &.is--secondary {
             color: @sw-condition-group-color-secondary-text;
         }
 
