--- a/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.html.twig
@@ -3,7 +3,7 @@
         {% block sw_condition_group_field_condition %}
             <div class="group-container field--condition">
                 {% block sw_condition_group_field_condition_select %}
-                    <select name="name" class="condition-group__field" ref="conditionTypeSelect">
+                    <select name="name" class="condition-group__field" ref="conditionTypeSelect" @change="handleConditionChange">
                         {% block sw_condition_group_field_condition_select_option %}
                             <option v-for="innerCondition in conditionTypes"
                                     :selected="innerCondition.identifier === condition.type"
@@ -19,8 +19,8 @@
         {% block sw_condition_group_field_operator %}
             <div class="group-container field--operator">
                 {% block sw_condition_group_field_operator_select %}
-                    <select name="name" class="condition-group__field is--secondary">
-                        <option value="">{{ condition.value.operator }}</option>
+                    <select name="name" class="condition-group__field is--secondary" ref="operatorTypeSelect" @change="handleOperatorChange">
+                        <option v-for="operator in conditionOperators" value="">{{ operator.label }}</option>
                     </select>
                 {% endblock %}
             </div>
