NEXT-1114 - Add sw-button-group

--- a/Resources/administration/src/app/component/base/sw-button/sw-button.less
+++ b/Resources/administration/src/app/component/base/sw-button/sw-button.less
@@ -69,10 +69,8 @@
         color: lighten(@sw-button-default-color-text, 30%);
     }
 
-    &.sw-button--square {
-        .sw-icon {
-            color: @sw-button-default-color-text;
-        }
+    &.sw-button--square .sw-icon {
+        color: @sw-button-default-color-text;
     }
 
     &.sw-button--primary {
