--- a/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.html.twig
@@ -1,13 +1,16 @@
 {% block sw_condition_group %}
     <div class="sw-condition-group">
         {% block sw_condition_group_field_condition %}
-            <div class="group-container field--condition">
+            <div class="sw-condition-group__container field--condition">
                 {% block sw_condition_group_field_condition_select %}
-                    <select name="name" class="condition-group__field" ref="conditionTypeSelect" @change="handleConditionChange">
+                    <select name="name"
+                            class="sw-condition-group__field"
+                            ref="conditionTypeSelect"
+                            @change="handleConditionChange">
                         {% block sw_condition_group_field_condition_select_option %}
-                            <option v-for="innerCondition in conditionTypes"
-                                    :selected="innerCondition.identifier === condition.type"
-                                    value="innerCondition.identifier">
+                            <option v-for="(innerCondition, innerConditionType) in conditionTypes"
+                                    :selected="innerConditionType === condition.type"
+                                    :value="innerConditionType">
                                 {{ innerCondition.label }}
                             </option>
                         {% endblock %}
@@ -17,19 +20,25 @@
         {% endblock %}
 
         {% block sw_condition_group_field_operator %}
-            <div class="group-container field--operator">
+            <div class="sw-condition-group__container field--operator">
                 {% block sw_condition_group_field_operator_select %}
-                    <select name="name" class="condition-group__field is--secondary" ref="operatorTypeSelect" @change="handleOperatorChange">
-                        <option v-for="operator in conditionOperators" value="">{{ operator.label }}</option>
+                    <select name="name"
+                            class="sw-condition-group__field is--secondary"
+                            ref="operatorTypeSelect"
+                            @change="handleOperatorChange">
+                        <option v-for="operator in conditionOperators"
+                                value="">{{ operator.label }}</option>
                     </select>
                 {% endblock %}
             </div>
         {% endblock %}
 
         {% block sw_condition_group_field_value %}
-            <div class="group-container field--value">
+            <div class="sw-condition-group__container field--value">
                 {% block sw_condition_group_field_value_input %}
-                    <input type="text" value="" v-bind:value="condition.value.amount" class="condition-group__field is--secondary">
+                    <input type="text"
+                           value="condition.value.amount"
+                           class="sw-condition-group__field is--secondary">
                 {% endblock %}
             </div>
         {% endblock %}
