--- a/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.less
+++ b/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.less
@@ -1,13 +1,17 @@
 @import "~less/variables";
 
 @sw-condition-group-color-primary: #6E8A97;
-@sw-condition-group-color-primary-text: #fff;
+@sw-condition-group-color-primary-text: @color-white;
 
-@sw-condition-group-color-secondary: #fff;
+@sw-condition-group-color-secondary: @color-white;
 @sw-condition-group-color-secondary-text: #4D6989;
 
 @sw-condition-group-color-border: #D6DDE5;
 @sw-condition-group-font-size: 14px;
+
+@sw-condition-group-z-index-value: 10000;
+@sw-condition-group-z-index-operator: 10050;
+@sw-condition-group-z-index-condition: 10100;
 
 .sw-condition-group {
     width: 100%;
@@ -19,7 +23,7 @@
         clear: both;
     }
 
-    .group-container {
+    .sw-condition-group__container {
         position: relative;
         line-height: 40px;
         padding: 0 15px;
@@ -30,7 +34,7 @@
         &.field--condition {
             background: @sw-condition-group-color-primary;
             color: @sw-condition-group-color-primary-text;
-            z-index: 10100;
+            z-index: @sw-condition-group-z-index-condition;
             width: 25%;
             border-top-left-radius: 3px;
             border-bottom-left-radius: 3px;
@@ -66,7 +70,7 @@
             border-top: 1px solid @sw-condition-group-color-border;
             border-bottom: 1px solid @sw-condition-group-color-border;
             margin-left: -10px;
-            z-index: 10050;
+            z-index: @sw-condition-group-z-index-operator;
             padding-left: 30px;
 
             &:before {
@@ -96,7 +100,7 @@
             width: 49%;
             border-top: 1px solid @sw-condition-group-color-border;
             border-bottom: 1px solid @sw-condition-group-color-border;
-            z-index: 10000;
+            z-index: @sw-condition-group-z-index-value;
             padding-left: 20px;
         }
 
@@ -113,7 +117,7 @@
         }
     }
 
-    .condition-group__field {
+    .sw-condition-group__field {
         border: 0;
         background: none;
         color: @sw-condition-group-color-primary-text;
