--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
@@ -6,7 +6,7 @@
                 <template slot="search-bar">
                     <sw-search-bar :placeholder="$tc('sw-settings-rule.general.placeholderSearchBar')"
                                    :searchType="$tc('sw-settings-rule.general.mainMenuItemGeneral')"
-                                   @search="this.onSearch">
+                                   @search="onSearch">
                     </sw-search-bar>
                 </template>
             {% endblock %}
@@ -233,7 +233,7 @@
                                             {% block sw_settings_rule_list_sidebar_delete %}
                                                 <sw-sidebar-item
                                                         icon="default-action-trash"
-                                                        :title="$tc('sw-settings-rule.list.bulkTrash')"
+                                                        :title="$tc('sw-settings-rule.list.titleSidebarBulkTrash')"
                                                         position="bottom"
                                                         @click="onBulkDelete">
                                                 </sw-sidebar-item>
