--- a/Resources/administration/src/module/sw-settings-snippet-set/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet-set/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
@@ -118,13 +118,46 @@
                                                         {% endblock %}
 
                                                         {% block sw_settings_snippet_set_list_card_list_grid_column_base_action_btn_delete %}
-                                                            <sw-context-menu-item variant="danger">
+                                                            <sw-context-menu-item variant="danger"
+                                                                                  @click="onDeleteSet(item.id)">
                                                                 {{ $tc('sw-settings-snippet-sets.list.contextMenuDelete') }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
                                                     </sw-context-button>
                                                 {% endblock %}
                                             </sw-grid-column>
+                                        {% endblock %}
+
+                                        {% block sw_settings_snippet_set_list_columns_delete_modal %}
+                                            <sw-modal v-if="showDeleteModal === item.id"
+                                                      @closeModal="onCloseDeleteModal"
+                                                      :title="$tc('sw-settings-snippet-sets.list.modalTitleDelete')"
+                                                      variant="small">
+                                                {% block sw_settings_snippet_set_list_delete_modal_confirm_delete_text %}
+                                                    <p class="sw-settings-snippet-set-list__confirm-delete-text">
+                                                        {{ $tc('sw-settings-snippet-sets.list.textDeleteConfirm', 0, { name: item.name }) }}
+                                                    </p>
+                                                {% endblock %}
+
+                                                {% block sw_settings_snippet_set_list_delete_modal_footer %}
+                                                    <template slot="modal-footer">
+                                                        {% block sw_settings_snippet_set_list_delete_modal_cancel %}
+                                                            <sw-button @click="onCloseDeleteModal"
+                                                                       size="small">
+                                                                {{ $tc('sw-settings-snippet-sets.list.buttonCancel') }}
+                                                            </sw-button>
+                                                        {% endblock %}
+
+                                                        {% block sw_settings_snippet_set_list_delete_modal_confirm %}
+                                                            <sw-button @click="onConfirmDelete(item.id)"
+                                                                       variant="primary"
+                                                                       size="small">
+                                                                {{ $tc('sw-settings-snippet-sets.list.buttonDelete') }}
+                                                            </sw-button>
+                                                        {% endblock %}
+                                                    </template>
+                                                {% endblock %}
+                                            </sw-modal>
                                         {% endblock %}
                                     </template>
                                 {% endblock %}
