--- a/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.less
+++ b/Resources/administration/src/app/component/form/sw-condition-group/sw-condition-group.less
@@ -115,6 +115,15 @@
             line-height: 45px;
             text-align: left;
         }
+
+        .sw-field {
+            input {
+                outline: none;
+                box-shadow: none;
+                border: 0 none;
+                padding: 7px 0;
+            }
+        }
     }
 
     .sw-condition-group__field {
