--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -15,7 +15,7 @@
 @color-steam-cloud:              #D8DDE6;
 @color-link-water:               #FCFCFC;
 @color-light-gray:               #F4F7FA;
-@color-drag-select-box:               rgba(0, 162, 255, .4);
+@color-drag-select-box:          rgba(0, 162, 255, .4);
 
 // Module colors
 @color-product:                 #57D9A3;
@@ -50,3 +50,4 @@
 @z-index-context-menu:           1100;
 @z-index-tooltip:                1100;
 @z-index-notifications:          1200;
+@z-index-dragdrop:               1400;
